--- a/110-workflows-checklist.qmd
+++ b/110-workflows-checklist.qmd
@@ -1,6 +1,8 @@
 # Workflows Checklist {#workflows-checklist .unnumbered}
 
-```{r, results='asis', echo=FALSE}
+```{r workflows-checklist-setup}
+#| results: 'asis'
+#| echo: false
 source("_common.R")
 status("complete")
 ```
