quarto-fy part 2 introduction

--- a/200-data-introduction.qmd
+++ b/200-data-introduction.qmd
@@ -2,7 +2,9 @@
 
 # Introduction {#data-introduction .unnumbered}
 
-```{r, results='asis', echo=FALSE}
+```{r setup-data-introduction}
+#| results: 'asis'
+#| echo: false
 source("_common.R")
 status("complete")
 ```
